Editor/Test/ok/files/New in ver x + users etc/QM 2.3.5/test CsScript/rejected/CsScript_OutCallback.cs
 /
function @*s

out "%S" s
